fixed navbar phone number on safari mobile
safari mobile adds a-tag for phone numbers. added style to apply color to a-tag

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ a:hover {
 	margin-left: -44px;
 }
 
-.navbar a.navbar__menu__link--change-color, .navbar .contact p.navbar__menu__link--change-color  {
+.navbar a.navbar__menu__link--change-color, .navbar .contact p.navbar__menu__link--change-color, .navbar .contact p.navbar__menu__link--change-color a  {
 	color: #1F1F1F!important;
 }
 
